typescript/checker/tests/conformance/expressions/typeGuards/typeGuardEnums.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            28,
        ),
        hi: BytePos(
            29,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardEnums.ts:4:5
  |
4 | let x: number|string|E|V;
  |     ^

